--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-alembic==1.0.7
+alembic==1.3.0
 Click==7.0
-Flask==1.0.2
-Flask-Migrate==2.3.1
+Flask==1.1.1
+Flask-Migrate==2.5.2
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.3.2
+Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
-Jinja2==2.10
-Mako==1.0.7
-MarkupSafe==1.1.0
-python-dateutil==2.7.5
-python-editor==1.0.3
-six==1.12.0
-SQLAlchemy==1.2.17
-Werkzeug==0.14.1
+Jinja2==2.10.3
+Mako==1.1.0
+MarkupSafe==1.1.1
+pkg-resources==0.0.0
+python-dateutil==2.8.1
+python-editor==1.0.4
+six==1.13.0
+SQLAlchemy==1.3.10
+Werkzeug==0.16.0
