Adding *.db in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -189,14 +189,14 @@ pyvenv.cfg
 pip-selfcheck.json
 
 ### VisualStudioCode ###
+.vscode/
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
 
 # End of https://www.gitignore.io/api/venv,flask,python,visualstudiocode
+
+### sqlite3 ###
+*.db
